--- a/css/style.css
+++ b/css/style.css
@@ -173,18 +173,15 @@ h2.tittle {
 .waiting .waiting_wrapper {
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: flex-start;
     margin-top: 45px;
+    gap: 20px;
 }
 
 .waiting .waiting_wrapper .waiting_item {
-    width: 339px;
+    width: 330px;
     text-align: center;
-}
-
-.waiting_wrapper .waiting_item:not(:last-child) {
-    margin-right: 48px;
 }
 
 .waiting .waiting_wrapper .waiting_item .waiting_img {
@@ -206,19 +203,21 @@ h2.tittle {
     padding: 102px 0 107px 0;
 }
 
+
 .optimization .optimization_header {
-    margin-left: 391px;
+    text-align: center;
+    margin: 0 10px auto 10px;
     color: #299cbd;
     font-size: 30px;
-    font-weight: 400;
+    font-weight: 700;
     text-transform: uppercase;
 }
 
 .optimization .optimization_text {
-    margin-left: 391px;
+    margin: 0 10px auto 10px;
     margin-top: 25px;
     color: #4a4a4a;
-    font-size: 17px;
+    font-size: 21px;
     font-weight: 300;
 }
 
@@ -226,12 +225,12 @@ h2.tittle {
     font-weight: 700;
 }
 
-.optimization .optimization_img {
+/* .optimization .optimization_img {
     position: absolute;
     top: -54px;
     left: -240px;
     z-index: -1;
-}
+} */
 
 
 /* Section Finish */
@@ -261,6 +260,7 @@ h2.tittle {
 .finish .finish_wrapper {
     margin-top: 41px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
